# cmake-git-info

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.c  version.h.in
support/: version.cmake
